# rathole-manage

./: .dev.vars.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.worker.json  vitest.config.ts  wrangler.jsonc
.github/workflows/: agent-ci.yml  apt-pages.yml  web-ci.yml
agent/: Cargo.toml  agent.env.example  rathole-agent.service
agent/debian/: postinst  postrm
agent/src/: acme.rs  enroll.rs  http_proxy.rs  logcap.rs  main.rs  probe.rs  protocol.rs  runner.rs  svcstatus.rs  sysstat.rs  tui.rs
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/icu/reall/rathole/rathole_manage_app/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: api.dart  app_state.dart  config_logic.dart  models.dart  utils.dart
app/lib/src/pages/: dashboard_page.dart  home_shell.dart  instance_page.dart  login_page.dart  settings_page.dart  users_page.dart
app/lib/src/widgets/: common.dart
app/test/: config_logic_test.dart
patches/: rathole-direct-api.patch
scripts/: prepare-rathole-patch.ps1  prepare-rathole-patch.sh
src/react-app/: App.tsx  index.css  main.tsx
src/react-app/components/: CodeBlock.tsx  StatusBadge.tsx
src/react-app/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
src/react-app/hooks/: useHubSocket.ts
src/react-app/lib/: api.ts  auth.tsx  utils.ts
src/react-app/pages/: Dashboard.tsx  InstanceDetail.tsx  Login.tsx  Settings.tsx  Users.tsx
src/shared/: config-generator.test.ts  config-generator.ts  types.ts
src/worker/: hub.ts  index.ts  passwords.test.ts  passwords.ts  server-config.ts  traffic.test.ts  traffic.ts
