[package]
name = "rathole-agent"
version = "0.1.0"
edition = "2021"
description = "Rust agent that embeds rathole and connects a node to the rathole-manage control plane over WebSocket."

[[bin]]
name = "rathole-agent"
path = "src/main.rs"

[dependencies]
# rathole is embedded directly as a library — we call rathole::run() in-process,
# so there is no separate rathole binary to install or supervise.
rathole = "0.5"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

# rathole's build pulls openssl-sys transitively (vergen -> git2). We don't use
# openssl directly, but enabling its `vendored` feature makes openssl-sys build
# a static OpenSSL from source, so the agent cross-compiles cleanly for musl /
# aarch64 in CI without needing a system OpenSSL for each target.
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
lto = "thin"
