[package]
name = "rathole-agent"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust agent that embeds rathole and connects a node to the rathole-manage control plane over WebSocket."

[[bin]]
name = "rathole-agent"
path = "src/main.rs"

[dependencies]
# rathole is embedded directly as a library — we call rathole::run() in-process,
# so there is no separate rathole binary to install or supervise.
rathole = "0.5"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

# HTTP client for the interactive `login` flow: POST /api/login (captures the
# session cookie) then POST /api/agent/enroll. Cookie store persists the session
# between the two calls. rustls TLS, no system OpenSSL needed.
ureq = { version = "2", default-features = false, features = ["tls", "json", "cookies"] }

# Terminal UI for `rathole-agent login` (Hub URL / username / password form).
ratatui = "0.28"
crossterm = "0.28"

# rathole's build pulls openssl-sys transitively (vergen -> git2). We don't use
# openssl directly, but enabling its `vendored` feature makes openssl-sys build
# a static OpenSSL from source, so the agent cross-compiles cleanly for musl /
# aarch64 in CI without needing a system OpenSSL for each target.
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
lto = "thin"

# ---- Debian packaging (cargo-deb) ------------------------------------------
[package.metadata.deb]
maintainer = "rathole-manage <qwe7002.ai@gmail.com>"
copyright = "2026, rathole-manage contributors"
extended-description = """\
Agent for the rathole-manage control panel. Embeds the rathole reverse proxy as \
a library and runs it in-process, connecting back to the panel over WebSocket to \
apply generated config, stream logs/metrics, and accept start/stop/restart. \
Enroll a node with `rathole-agent login`."""
section = "net"
priority = "optional"
# Set explicitly (rather than $auto) so cross-arch packages build without
# dpkg-shlibdeps needing the foreign architecture's libraries on the runner.
depends = "libc6, libgcc-s1"
assets = [
    ["target/release/rathole-agent", "usr/bin/", "755"],
    ["rathole-agent.service", "lib/systemd/system/rathole-agent.service", "644"],
    ["agent.env.example", "usr/share/doc/rathole-agent/agent.env.example", "644"],
    ["../README.md", "usr/share/doc/rathole-agent/README.md", "644"],
]
maintainer-scripts = "debian/"
